--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "@types/react": "17.0.9",
     "raw-loader": "^4.0.2",
     "typescript": "4.3.2"
-  }
+  },
+  "resolutions": { "**/pbkdf2": "3.1.1", "**/**/pbkdf2": "3.1.1", "**/**/**/pbkdf2": "3.1.1" }
 }
