--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.4.0-0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@storybook/react": "^6.4.14",
     "@zoralabs/manage-auction-hooks": "^0.0.11",
     "@zoralabs/nft-components": "^0.3.1",
     "@zoralabs/nft-hooks": "^0.8.1",
